<resources>
    <!-- AndroidManifest.xml -->
    <string name="app_name">Kaptal</string>
    <string name="activity_trasaction">Inserir transação</string>

    <!-- toolbar_home.xml -->
    <string name="menu_add">Inserir</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_refresh">Atualizar</string>

    <!-- toolbar_transaction -->
    <string name="menu_check">Gravar</string>
    <string name="menu_close">Descartar</string>

    <!-- activity_transaction -->
    <string name="et_amount">Valor</string>
    <string name="et_description">Descrição</string>
    <string name="et_date">Data da transação</string>
    <string name="spinner_category">Categoria</string>
    <string-array name="array_category">
        <item>Alimentação</item>
        <item>Casa</item>
        <item>Educação</item>
        <item>Eletrônicos</item>
        <item>Lazer</item>
        <item>Outros</item>
        <item>Saúde</item>
        <item>Serviços</item>
        <item>Transportes</item>
        <item>Vestuário</item>
        <item>Viagens</item>
    </string-array>
</resources>
