<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_transaction"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="kaptal.gabrielrunescape.com.br.view.TransactionActivity">

    <EditText
        android:hint="@string/et_description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:id="@+id/et_description"
        android:ems="10"/>

    <Spinner
        android:prompt="@string/spinner_category"
        android:entries="@array/array_category"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/spinner_category"
        android:spinnerMode="dialog" />

    <EditText
        android:onClick="showDatePickerDialog"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/et_amount"
        android:id="@+id/et_amount"
        android:ems="10"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/et_date"
        android:inputType="date"
        android:id="@+id/et_date"
        android:ems="10" />
</LinearLayout>
